--- a/index.jade
+++ b/index.jade
@@ -1,8 +1,3 @@
-- require('jade').filters.code = function( block ) {
-- return block.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/"/g, '&quot;').replace(/#/g, '&#35;').replace(/\\/g, '\\\\');
-- }
-
-
 doctype html
 html.page-intro(lang='en-us')
   head
@@ -22,9 +17,12 @@ html.page-intro(lang='en-us')
           .mainbar-item
             a.intro-link Intro
           .mainbar-item
-            a.getit-link Get it
+            a.getit-link Download
+          .mainbar-item
+            a.docs-link(href="https://github.com/dariuszsikorski/Csstetic/tree/master/dist") <i class="fa fa-github" aria-hidden="true"></i> Github
           .mainbar-item
             a.docs-link(href="./docs") Docs <span class="ion-ios-arrow-thin-right icon"></span>
+
           //- .mainbar-item
           //-   a(href="/docs") Docs <span class="ion-chevron-right">
         //- .mainbar-left
@@ -50,7 +48,7 @@ html.page-intro(lang='en-us')
       h3.hidden Description
       .content
         .subsection
-          p Csstetic is a set of code snippets which joined together solve common <a href="https://en.wikipedia.org/wiki/User_interface">ui design</a> tasks. It does not "reset" or overwrite project's styling, that makes it easy to use with any existing framework or as a standalone tool. For rapid prototyping <strong>Classic</strong> <i><small>(precompiled css)</small></i> version should be enough, while <strong>Semantic</strong> <i><small>(scss mixins)</small></i> may require two more clicks and results in clean <i><small>(semantic)</small></i> html code. In fact - Both versions can be used together.
+          p Csstetic is a set of code snippets which joined together solve common <a href="https://en.wikipedia.org/wiki/User_interface">ui design</a> tasks. It does not "reset" or overwrite project's styling, that makes it easy to use with any existing framework or as a standalone tool. For rapid prototyping <strong>Classic</strong> <i><small>(compiled css)</small></i> version should be enough, while <strong>Semantic</strong> <i><small>(scss mixins)</small></i> require any sass compiler and results in clean <i><small>(semantic)</small></i> html code.
 
 
 
@@ -60,24 +58,22 @@ html.page-intro(lang='en-us')
         .difference-paragraph
           p <strong>Classic</strong> version uses simmilar syntax to other common css frameworks:
 
-          code
-            :code
-              <span class="fw-button fw-size-md fw-bg-red">button</span>
+          code.
+            &lt;span class=&quot;fw-button fw-size-md fw-bg-red&quot;&gt;button&lt;/span&gt;
 
           p <strong>Semantic</strong> version moves all the styling back to scss file:
           pre
-            code
-              :code
-                Html:
-                <span>button</span>
+            code.
+              Html:
+              &lt;span&gt;button&lt;/span&gt;
 
-                Scss:
-                span {
-                  @include fw-button;
-                  @include fw-size-base;
-                  @include fw-size(md);
-                  background: fw-color(red);
-                }
+              Scss:
+              span {
+                @include fw-button;
+                @include fw-size-base;
+                @include fw-size(md);
+                background: fw-color(red);
+              }
         .comparison-table
           .row
             .col
@@ -93,7 +89,7 @@ html.page-intro(lang='en-us')
             .col
               p Free
             .col
-              p <small>$</small>19
+              p Free
             .col
               p Classic version is one variant of compiled Csstetic, all the goodies available through mixins and functions come with Semantic version.
           .row
@@ -154,11 +150,11 @@ html.page-intro(lang='en-us')
             .col
               p License
             .col
-              p <a href="./license-classic.html">CC4 License</a>
+              p <a href="./license.html">MIT</a>
             .col
-              p <a href="license-semantic.html">Custom License</a>
+              p <a href="./license.html">MIT</a>
             .col
-              p Both versions give you as much freedom as possible in personal and commercial use. However semantic version is paid and has some restrictions. By buying this project you support it's developers and may expect product updates in future.
+              p Both versions give you as much freedom as possible in personal and commercial use.
 
     section.features
       .content
@@ -214,23 +210,23 @@ html.page-intro(lang='en-us')
                 p It's easy to end up styling project with too-many class attributes for one element, especially on prototyping stage. Html markup should stand for document's semantic structure. In semantic version you can move all visual information back to stylesheet file, that's where the name "semantic" come from.
 
 
-    section.discussit.reveal
-      .content
-        h3 Discuss it
-        .button.discuss-btn
-          p.link <a href="./discuss.html"><i class="material-icons">comment</i><span class="ion-ios-arrow-thin-right icon"></span></a>
+    //- section.discussit.reveal
+    //-   .content
+    //-     h3 Discuss it
+    //-     .button.discuss-btn
+    //-       p.link <a href="./discuss.html"><i class="material-icons">comment</i><span class="ion-ios-arrow-thin-right icon"></span></a>
 
 
 
     section.getit#get
       .content
-        h3 Get it
+        h3 Download
         .get-versions
           .get-row
             .get-col
-              a(href="./download/download-latest.php").button.classic Classic <small>(Css)</small><span class="label">free</span>
+              a(href="./download/download-latest-css.php").button.classic Classic <small>(Css)</small><span class="label">free</span>
             .get-col
-              a(href="https://gumroad.com/l/OuSa").button.semantic Semantic <small>(Scss)</small><span class="label"><small>$</small>19</span>
+              a(href="./download/download-latest-scss.php").button.semantic Semantic <small>(Scss)</small><span class="label">free</span>
 
           p.install <a href="./docs#installation">Getting started <span class="ion-ios-arrow-thin-right icon"></span></a><br><br><br>
           p.fw-text-center.fw-block.fw-txt-grey-500 Packages include <strong>press kit</strong> images.
@@ -238,7 +234,6 @@ html.page-intro(lang='en-us')
       //- p sdfdgfd
       h3.hidden Footer
       .content
-        p &copy;<span class="current-year">2016</span> Csstetic.com <span class="divider">|</span> <a class="author" href="http://prettyminimal.com/">Pretty Minimal</a>
 
     //- script(src='https://raw.githubusercontent.com/pbakaus/transformie/master/transformie.js', type='text/javascript')
     script(src='./pages/assets/js/plugins-dist.js', type='text/javascript')
