--- a/index.jade
+++ b/index.jade
@@ -234,6 +234,7 @@ html.page-intro(lang='en-us')
       //- p sdfdgfd
       h3.hidden Footer
       .content
+        p &copy;<span class="current-year">2016 - current</span> Csstetic.com <span class="divider">|</span> <a class="author" href="http://prettyminimal.com/">Pretty Minimal</a> <span class="divider">|</span> <a href="http://dariuszsikorski.pl/" class="author">Dariusz Sikorski</a>
 
     //- script(src='https://raw.githubusercontent.com/pbakaus/transformie/master/transformie.js', type='text/javascript')
     script(src='./pages/assets/js/plugins-dist.js', type='text/javascript')
